--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "node": "^23.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -24,5 +25,18 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.7"
-  }
+  },
+  "description": "You are developing a social media application and need to display all user posts on the home page.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DHANYA-00/Using_your_component_to_view_all_of_the_list_of_entities_A2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DHANYA-00/Using_your_component_to_view_all_of_the_list_of_entities_A2/issues"
+  },
+  "homepage": "https://github.com/DHANYA-00/Using_your_component_to_view_all_of_the_list_of_entities_A2#readme"
 }
